fixed charts to only be visible after survey is finished

--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ h2, h3 {
   width: 75%;
   margin-left: auto;
   margin-right: auto;
+  visibility: hidden;
 }
 
 #bar-chart, #donut-chart {
